Initial commit: Progress on the Storybook front.  Got it working locally.

--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -16,7 +16,7 @@ mutagen_enabled: false
 use_dns_when_possible: true
 composer_version: "2"
 web_environment: []
-nodejs_version: "14"
+nodejs_version: "18"
 
 # Storybook configuration
 web_extra_exposed_ports:
@@ -24,6 +24,27 @@ web_extra_exposed_ports:
   container_port: 6006
   http_port: 6005
   https_port: 6006
+web_extra_daemons:
+  - name: node.js
+    command: "tail -F package.json > /dev/null"
+    directory: /var/www/html
+hooks:
+  post-start:
+    - exec: echo '================================================================================='
+    - exec: echo '                                  NOTICE'
+    - exec: echo '================================================================================='
+    - exec: echo 'The node.js container is ready. You can start storybook by typing:'
+    - exec: echo 'ddev yarn storybook'
+    - exec: echo
+    - exec: echo 'By default it will be available at https://drupal-storybook.ddev.site:6006'
+    - exec: echo "Use ddev describe to confirm if this doesn't work."
+    - exec: echo 'Check the status of startup by running "ddev logs --follow --time"'
+    - exec: echo '================================================================================='
+
+###############################################################################
+# End of customizations
+###############################################################################
+
 
 # Key features of ddev's config.yaml:
 
