--- a/web/sites/development.services.yml
+++ b/web/sites/development.services.yml
@@ -4,6 +4,17 @@
 # 'example.settings.local.php' file, which sits next to this file.
 parameters:
   http.response.debug_cacheability_headers: true
+  twig.config:
+    debug: true
+    cache: false
+  cors.config:
+    enabled: true
+    allowedHeaders: [ '*' ]
+    allowedMethods: [ ]
+    allowedOrigins: [ '*' ]
+    exposedHeaders: false
+    maxAge: false
+    supportsCredentials: true
 services:
   cache.backend.null:
     class: Drupal\Core\Cache\NullBackendFactory
