Include dev files to demonstrate the proper working of cl_server.

--- a/web/sites/cl_server_dev.services.yml
+++ b/web/sites/cl_server_dev.services.yml
@@ -7,8 +7,8 @@ parameters:
   cors.config:
     enabled: true
     allowedHeaders: [ '*' ]
-    allowedMethods: [ ]
-    allowedOrigins: [ '*' ]
+    allowedMethods: [ '*' ]
+    allowedOrigins: [ 'https://drupal-storybook.ddev.site:6006', 'https://drupal-storybook.ddev.site' ]
     exposedHeaders: false
     maxAge: false
     supportsCredentials: true
