--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,12 @@
         "drupal/cl_server": "^2.0@beta",
         "drupal/gin": "^3.0@RC",
         "drush/drush": "^11 || ^12",
-        "cweagans/composer-patches": "^1.7",
-        "drupal/sdc_examples": "^1.0@dev"
+        "cweagans/composer-patches": "^1.7"
     },
     "require-dev": {
-        "drupal/core-dev": "^10.1"
+        "drupal/core-dev": "^10.1",
+        "drupal/sdc_examples": "^1.0@dev",
+        "drupal/cl_generator": "^2"
     },
     "conflict": {
         "drupal/drupal": "*"
