--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
   "devDependencies": {
     "@babel/core": "^7.21.4",
-    "@lullabot/storybook-drupal-addon": "^1.0.27",
+    "@lullabot/storybook-drupal-addon": "^2.0.6",
     "@mdx-js/react": "^1.6.22",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-docs": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/addons": "^6.5.16",
-    "@storybook/builder-webpack5": "^6.5.16",
-    "@storybook/cli": "^6.5.16",
-    "@storybook/manager-webpack5": "^6.5.16",
-    "@storybook/server": "^6.5.16",
-    "@storybook/theming": "^6.5.16",
-    "babel-loader": "^8.3.0"
+    "@storybook/addon-actions": "^7.5.3",
+    "@storybook/addon-docs": "^7.5.3",
+    "@storybook/addon-essentials": "^7.5.3",
+    "@storybook/addon-links": "^7.5.3",
+    "@storybook/addons": "^7.5.3",
+    "@storybook/cli": "^7.5.3",
+    "@storybook/server": "^7.5.3",
+    "@storybook/server-webpack5": "^7.5.3",
+    "@storybook/theming": "^7.5.3",
+    "babel-loader": "^8.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "storybook": "^7.5.3"
   },
   "scripts": {
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
-  }
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
+  },
+  "packageManager": "yarn@4.0.2"
 }
