Storybook-7: Resolve dependency issues.  Also upgrade to latest Storybook.

--- a/package.json
+++ b/package.json
@@ -3,19 +3,26 @@
     "@babel/core": "^7.21.4",
     "@lullabot/storybook-drupal-addon": "^2.0.6",
     "@mdx-js/react": "^1.6.22",
-    "@storybook/addon-actions": "^7.5.3",
-    "@storybook/addon-docs": "^7.5.3",
-    "@storybook/addon-essentials": "^7.5.3",
-    "@storybook/addon-links": "^7.5.3",
-    "@storybook/addons": "^7.5.3",
-    "@storybook/cli": "^7.5.3",
-    "@storybook/server": "^7.5.3",
-    "@storybook/server-webpack5": "^7.5.3",
-    "@storybook/theming": "^7.5.3",
+    "@storybook/addon-actions": "^7.6.2",
+    "@storybook/addon-docs": "^7.6.2",
+    "@storybook/addon-essentials": "^7.6.2",
+    "@storybook/addon-links": "^7.6.2",
+    "@storybook/addons": "^7.6.2",
+    "@storybook/blocks": "^7.6.2",
+    "@storybook/cli": "^7.6.2",
+    "@storybook/components": "^7.6.2",
+    "@storybook/core-events": "^7.6.2",
+    "@storybook/manager-api": "^7.6.2",
+    "@storybook/preview-api": "^7.6.2",
+    "@storybook/server": "^7.6.2",
+    "@storybook/server-webpack5": "^7.6.2",
+    "@storybook/theming": "^7.6.2",
+    "@storybook/types": "^7.6.2",
     "babel-loader": "^8.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "storybook": "^7.5.3"
+    "react": "^17",
+    "react-dom": "^17",
+    "storybook": "^7.6.2",
+    "webpack": "^5.89.0"
   },
   "scripts": {
     "storybook": "storybook dev -p 6006",
