Storybook alignment: Part 2 - Update Storybook config files - Update Yarn / package build system files.

--- a/package.json
+++ b/package.json
@@ -1,30 +1,18 @@
 {
+  "packageManager": "yarn@4.2.2",
   "devDependencies": {
-    "@lullabot/storybook-drupal-addon": "^2.0.6",
-    "@mdx-js/react": "^1.6.22",
-    "@storybook/addon-actions": "^7.6.6",
-    "@storybook/addon-docs": "^7.6.6",
-    "@storybook/addon-essentials": "^7.6.6",
-    "@storybook/addon-links": "^7.6.6",
-    "@storybook/addons": "^7.6.6",
-    "@storybook/blocks": "^7.6.6",
-    "@storybook/cli": "^7.6.6",
-    "@storybook/components": "^7.6.6",
-    "@storybook/core-events": "^7.6.6",
-    "@storybook/manager-api": "^7.6.6",
-    "@storybook/preview-api": "^7.6.6",
-    "@storybook/server": "^7.6.6",
-    "@storybook/server-webpack5": "^7.6.6",
-    "@storybook/theming": "^7.6.6",
-    "@storybook/types": "^7.6.6",
-    "react": "^17",
-    "react-dom": "^17",
-    "storybook": "^7.6.6",
-    "webpack": "^5.89.0"
+    "@chromatic-com/storybook": "^1.4.0",
+    "@storybook/addon-essentials": "^8.1.1",
+    "@storybook/addon-links": "^8.1.1",
+    "@storybook/addon-webpack5-compiler-swc": "^1.0.2",
+    "@storybook/blocks": "^8.1.1",
+    "@storybook/server": "^8.1.1",
+    "@storybook/server-webpack5": "^8.1.1",
+    "@storybook/test": "^8.1.1",
+    "storybook": "^8.1.1"
   },
   "scripts": {
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
-  },
-  "packageManager": "yarn@4.0.2"
+  }
 }
