--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,7 @@ web/themes/custom/**/assets
 web/themes/custom/**/svg-symbols.svg
 web/themes/custom/**/bundle-stats.json
 !web/themes/custom/**/dist
+.yarn
 
 # OS X
 .DS_Store
